feat: setup detail

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=https://5624-180-177-226-134.ngrok-free.app
+VITE_API_BASE_URL=https://db5f-211-23-28-236.ngrok-free.app/api
+VITE_APP_USER_ID=b1a33b20-4d7b-4fe6-aa7a-676098a1bdc8
