--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@9.9.0",
   "scripts": {
     "build": "vite build",
-    "dev": "vite --port 3333 --open",
+    "dev": "vite --port 3333",
     "lint": "eslint .",
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@vueuse/core": "^11.0.3",
     "ant-design-vue": "4.x",
+    "dayjs": "^1.11.13",
     "ky": "^1.7.2",
     "pinia": "^2.2.2",
     "vue": "^3.5.2",
@@ -39,6 +40,7 @@
     "taze": "^0.16.7",
     "typescript": "^5.5.4",
     "unocss": "^0.62.3",
+    "unocss-preset-scrollbar-hide": "^1.0.1",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-vue-components": "^0.27.4",
     "unplugin-vue-macros": "^2.11.7",
